Switch to pkg-config-rs for lib

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rutie"
-version = "0.1.0"
+version = "0.1.2"
 authors = [
   "Steve Klabnik <steve@steveklabnik.com>",
   "Dmitry Gritsay <unseductable@gmail.com>",
@@ -19,6 +19,9 @@ links = "ruby"
 [dependencies]
 libc = "0.2.42"
 lazy_static = "1.0.1"
+
+[build-dependencies]
+pkg-config = "0.3.10"
 
 [features]
 default = []
