--- a/.travis.yml
+++ b/.travis.yml
@@ -16,18 +16,20 @@ before_install:
 - rvm use "$BUILD_RUBY_VERSION"
 - ruby --version
 - ruby -e 'require "pp"; pp RbConfig::CONFIG'
+- rustc -Vv
+- cargo -Vv
 
 before_script:
 - export PATH=$HOME/.cargo/bin:$HOME/.local/bin:$PATH
 
 script:
 - |
-  cargo build &&
-  cargo test
+  cargo -vv build &&
+  cargo -vv test
 
 env:
   global:
-    - TRAVIS_CARGO_NIGHTLY_FEATURE=""
+    - RUST_BACKTRACE=full
   matrix:
     - BUILD_RUBY_VERSION: 2.3.7
     - BUILD_RUBY_VERSION: 2.4.4
