--- a/examples/rutie_ruby_example/Rakefile
+++ b/examples/rutie_ruby_example/Rakefile
@@ -1,7 +1,12 @@
 require "bundler/gem_tasks"
 require "rake/testtask"
 
-Rake::TestTask.new(:test) do |t|
+desc 'Build Rust extension'
+task :build_lib do
+  sh 'cargo build --release'
+end
+
+Rake::TestTask.new(test: :build_lib) do |t|
   t.libs << "test"
   t.libs << "lib"
   t.test_files = FileList["test/**/*_test.rb"]
