Badges version [ci skip]

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,7 @@ lazy_static = "1.0.1"
 
 [build-dependencies]
 pkg-config = "0.3.10"
+
+[badges]
+travis-ci = { repository = "danielpclark/rutie", branch = "master" }
+maintenance = { status = "actively-developed" }
