make dir for Windows

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -102,7 +102,8 @@ install:
   - appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
   - rustup-init -yv --default-toolchain %channel% --default-host %target%
   - set PATH=%PATH%;%USERPROFILE%\.cargo\bin
-  - mkdir -p %USERPROFILE%\target\debug\deps
+  - set "DEPS=%USERPROFILE%\target\debug\deps"
+  - md "%DEPS%"
   - ruby -e 'lib = File.join(RbConfig::CONFIG["libdir"], RbConfig::CONFIG["LIBRUBY_ALIASES"].split(" ").first); exec "copy #{lib} %USERPROFILE%\target\debug\deps"'
   - rustc -vV
   - cargo -vV
