--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,32 +10,38 @@ environment:
   # Stable 64-bit MSVC
     - channel: stable
       target: x86_64-pc-windows-msvc
+      platform: x64
       RUBY_VERSION: 24-x64
       RUST_BACKTRACE: full
   # Stable 32-bit MSVC
     - channel: stable
       target: i686-pc-windows-msvc
+      platform: x86
       RUBY_VERSION: 24
       RUST_BACKTRACE: full
   # Beta 64-bit MSVC
     - channel: beta
       target: x86_64-pc-windows-msvc
+      platform: x64
       RUBY_VERSION: 24-x64
       RUST_BACKTRACE: full
   # Beta 32-bit MSVC
     - channel: beta
       target: i686-pc-windows-msvc
+      platform: x86
       RUBY_VERSION: 24
       RUST_BACKTRACE: full
   # Nightly 64-bit MSVC
     - channel: nightly
       target: x86_64-pc-windows-msvc
+      platform: x64
       RUBY_VERSION: 24-x64
       RUST_BACKTRACE: full
       #cargoflags: --features "unstable"
   # Nightly 32-bit MSVC
     - channel: nightly
       target: i686-pc-windows-msvc
+      platform: x86
       RUBY_VERSION: 24
       RUST_BACKTRACE: full
       #cargoflags: --features "unstable"
@@ -45,32 +51,38 @@ environment:
   # Stable 64-bit MSVC
     - channel: stable
       target: x86_64-pc-windows-msvc
+      platform: x64
       RUBY_VERSION: 25-x64
       RUST_BACKTRACE: full
   # Stable 32-bit MSVC
     - channel: stable
       target: i686-pc-windows-msvc
+      platform: x86
       RUBY_VERSION: 25
       RUST_BACKTRACE: full
   # Beta 64-bit MSVC
     - channel: beta
       target: x86_64-pc-windows-msvc
+      platform: x64
       RUBY_VERSION: 25-x64
       RUST_BACKTRACE: full
   # Beta 32-bit MSVC
     - channel: beta
       target: i686-pc-windows-msvc
+      platform: x86
       RUBY_VERSION: 25
       RUST_BACKTRACE: full
   # Nightly 64-bit MSVC
     - channel: nightly
       target: x86_64-pc-windows-msvc
+      platform: x64
       RUBY_VERSION: 25-x64
       RUST_BACKTRACE: full
       #cargoflags: --features "unstable"
   # Nightly 32-bit MSVC
     - channel: nightly
       target: i686-pc-windows-msvc
+      platform: x86
       RUBY_VERSION: 25
       RUST_BACKTRACE: full
       #cargoflags: --features "unstable"
@@ -80,32 +92,38 @@ environment:
   # Stable 64-bit GNU
     - channel: stable
       target: x86_64-pc-windows-gnu
+      platform: x64
       RUBY_VERSION: 24-x64
       RUST_BACKTRACE: full
   # Stable 32-bit GNU
     - channel: stable
       target: i686-pc-windows-gnu
+      platform: x86
       RUBY_VERSION: 24
       RUST_BACKTRACE: full
   # Beta 64-bit GNU
     - channel: beta
       target: x86_64-pc-windows-gnu
+      platform: x64
       RUBY_VERSION: 24-x64
       RUST_BACKTRACE: full
   # Beta 32-bit GNU
     - channel: beta
       target: i686-pc-windows-gnu
+      platform: x86
       RUBY_VERSION: 24
       RUST_BACKTRACE: full
   # Nightly 64-bit GNU
     - channel: nightly
       target: x86_64-pc-windows-gnu
+      platform: x64
       RUBY_VERSION: 24-x64
       RUST_BACKTRACE: full
       #cargoflags: --features "unstable"
   # Nightly 32-bit GNU
     - channel: nightly
       target: i686-pc-windows-gnu
+      platform: x86
       RUBY_VERSION: 24
       RUST_BACKTRACE: full
       #cargoflags: --features "unstable"
@@ -115,32 +133,38 @@ environment:
   # Stable 64-bit GNU
     - channel: stable
       target: x86_64-pc-windows-gnu
+      platform: x64
       RUBY_VERSION: 25-x64
       RUST_BACKTRACE: full
   # Stable 32-bit GNU
     - channel: stable
       target: i686-pc-windows-gnu
+      platform: x86
       RUBY_VERSION: 25
       RUST_BACKTRACE: full
   # Beta 64-bit GNU
     - channel: beta
       target: x86_64-pc-windows-gnu
+      platform: x64
       RUBY_VERSION: 25-x64
       RUST_BACKTRACE: full
   # Beta 32-bit GNU
     - channel: beta
       target: i686-pc-windows-gnu
+      platform: x86
       RUBY_VERSION: 25
       RUST_BACKTRACE: full
   # Nightly 64-bit GNU
     - channel: nightly
       target: x86_64-pc-windows-gnu
+      platform: x64
       RUBY_VERSION: 25-x64
       RUST_BACKTRACE: full
       #cargoflags: --features "unstable"
   # Nightly 32-bit GNU
     - channel: nightly
       target: i686-pc-windows-gnu
+      platform: x86
       RUBY_VERSION: 25
       RUST_BACKTRACE: full
       #cargoflags: --features "unstable"
