--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,10 @@ script:
   cargo build -vv &&
   cargo test -vv
 
+after_script:
+- echo "BUILD OUTPUT"
+- cat target/debug/build/rutie-*/output
+
 env:
   global:
     - RUST_BACKTRACE=full
