--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ after_script:
 env:
   global:
     - RUST_BACKTRACE=full
+    - CI_STDERR_LOG=true
   matrix:
     - BUILD_RUBY_VERSION: 2.3.7
     - BUILD_RUBY_VERSION: 2.4.4
