--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
     - rust: nightly
 
 before_install:
-- rvm install "$BUILD_RUBY_VERSION"
+- rvm reinstall --disable-binary "$BUILD_RUBY_VERSION"
 - rvm use "$BUILD_RUBY_VERSION"
 - ruby --version
 - ruby -e 'require "pp"; pp RbConfig::CONFIG'
