--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,9 @@ matrix:
     - os: osx
       rust: stable
       env: RUBY_STATIC=true BUILD_RUBY_VERSION=2.5.1
+    - os: windows
+      rust: stable
+      env: BUILD_RUBY_VERSION=2.5.1
 
 before_install:
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then rvm install --disable-binary "$BUILD_RUBY_VERSION"; fi
