--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_cache:
 before_install:
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then rvm install --disable-binary "$BUILD_RUBY_VERSION"; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then rvm install "$BUILD_RUBY_VERSION"; fi
-- rvm use "$BUILD_RUBY_VERSION"
+- if [[ "$TRAVIS_OS_NAME" != "windows" ]]; rvm use "$BUILD_RUBY_VERSION"; fi
 - ruby --version
 - ruby -e 'require "pp"; pp RbConfig::CONFIG'
 - rustc -Vv
@@ -43,19 +43,13 @@ matrix:
     - os: windows
       rust: stable
       env: BUILD_RUBY_VERSION=2.5.1
-      before_install:
-      - ruby -e 'require "pp"; pp RbConfig::CONFIG'
-      - rustc -Vv
-      - cargo -Vv
-      - mkdir -p target/debug/deps
 
 before_script:
 - export PATH=$HOME/.cargo/bin:$HOME/.local/bin:$PATH
 
 script:
-- |
-  cargo build -vv &&
-  cargo test -vv
+- cargo build -vv &&
+- cargo test -vv
 
 after_script:
 - cat target/debug/build/rutie-*/output
