--- a/.travis.yml
+++ b/.travis.yml
@@ -18,15 +18,7 @@ before_cache:
   - rm -rf /home/travis/.cargo/registry
 
 before_install:
-- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then rvm install --disable-binary "$BUILD_RUBY_VERSION"; fi
-- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then rvm install "$BUILD_RUBY_VERSION"; fi
-- |
-  if [[ "$TRAVIS_OS_NAME" != "windows" ]]
-  then
-    rvm use "$BUILD_RUBY_VERSION"
-    mkdir -p target/debug/deps
-    cp $(ruby -e 'puts File.join(RbConfig::CONFIG["libdir"], RbConfig::CONFIG["LIBRUBY_ALIASES"].split(" ").first)') target/debug/deps
-  fi
+- . scripts/travis_ci/install_ruby
 - ruby --version
 - ruby -e 'require "pp"; pp RbConfig::CONFIG'
 - rustc -Vv
