--- a/examples/rutie_ruby_example/Rakefile
+++ b/examples/rutie_ruby_example/Rakefile
@@ -12,7 +12,12 @@ task :build_lib do
   end
 end
 
-Rake::TestTask.new(test: :build_lib) do |t|
+desc 'bundle install'
+task :bundle_install do
+  sh 'bundle install'
+end
+
+Rake::TestTask.new(test: [:bundle_install, :build_lib]) do |t|
   t.libs << "test"
   t.libs << "lib"
   t.test_files = FileList["test/**/*_test.rb"]
