--- a/.travis.yml
+++ b/.travis.yml
@@ -68,4 +68,4 @@ env:
   matrix:
     - BUILD_RUBY_VERSION: 2.4.5
     - BUILD_RUBY_VERSION: 2.5.3
-    - BUILD_RUBY_VERSION: 2.6.0-rc2
+    - BUILD_RUBY_VERSION: 2.6.0
