--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,15 @@ matrix:
   include:
     - os: linux
       rust: stable
+      env: RUBY_THREADING=true BUILD_RUBY_VERSION=2.6.0
+      script: - |
+                cd examples/rutie_ruby_gvl_example
+                gem uninstall bundler -ax
+                gem install bundler -v 1.17.3
+                bundle install
+                bundle exec rake
+    - os: linux
+      rust: stable
       env: RUBY_STATIC=true BUILD_RUBY_VERSION=2.5.3
     - os: osx
       rust: stable
@@ -56,11 +65,6 @@ script:
 - |
   cargo build -vv &&
   cargo test -vv
-  cd examples/rutie_ruby_gvl_example
-  gem uninstall bundler -ax
-  gem install bundler -v 1.17.3
-  bundle install
-  bundle exec rake
 
 after_script:
 - cat target/debug/build/rutie-*/output
