Clean build artifacts in Ruby demos

--- a/examples/rutie_ruby_example/Rakefile
+++ b/examples/rutie_ruby_example/Rakefile
@@ -2,6 +2,14 @@ require "rbconfig"
 require "bundler/gem_tasks"
 require "rake/testtask"
 
+# Mac OS with rbenv users keep leaving behind build artifacts from
+#   when they tried to build against a statically linked Ruby and then
+#   try against a dynamically linked one causing errors in the build result.
+desc 'Preventative work'
+task :tidy_up do
+  sh 'cargo clean'
+end
+
 desc 'Build Rust extension'
 task :build_lib do
   case RbConfig::CONFIG['host_os']
@@ -17,7 +25,7 @@ task :bundle_install do
   sh 'bundle install'
 end
 
-Rake::TestTask.new(test: [:bundle_install, :build_lib]) do |t|
+Rake::TestTask.new(test: [:tidy_up, :bundle_install, :build_lib]) do |t|
   t.libs << "test"
   t.libs << "lib"
   t.test_files = FileList["test/**/*_test.rb"]
