--- a/.travis.yml
+++ b/.travis.yml
@@ -40,11 +40,21 @@ matrix:
       env: RUBY_THREADING=true BUILD_RUBY_VERSION=2.6.3
       script:
         - |
-          cd examples/rutie_ruby_gvl_example
-          gem uninstall bundler -ax
-          gem install bundler -v 1.17.3
+          echo "Running Eval Example"
+          cargo run --example eval "a=5;b=9;puts a+b"
+          echo "Running Ruby Example"
+          cd "$HOME/examples/rutie_ruby_example"
+          gem install bundler
           bundle install
           bundle exec rake
+          echo "Running Ruby GVL Example"
+          cd "$HOME/examples/rutie_ruby_gvl_example"
+          gem install bundler
+          bundle install
+          bundle exec rake
+          echo "Running Rust Example"
+          cd "$HOME/examples/rutie_rust_example"
+          cargo test
     - os: linux
       rust: stable
       env: RUBY_STATIC=true BUILD_RUBY_VERSION=2.6.3
