Linker path to Ruby DLL required
Rust's C linker arguments don't work as they should.  See issue
https://github.com/rust-lang/cargo/issues/4044#issuecomment-498508207
for more details on this. Hopefully in the future C linker arguments and
library paths will improve.

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,8 @@ matrix:
           bundle exec rake
           echo "Running Rust Example"
           cd "$WORKING_DIR/examples/rutie_rust_example"
+          export LD_LIBRARY_PATH=`ruby -e "puts RbConfig::CONFIG['libdir']"`
+          export DYLD_LIBRARY_PATH=$LD_LIBRARY_PATH
           cargo test
     - os: linux
       rust: stable
