--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,28 @@ matrix:
           echo "Running Rust Example"
           cd "$WORKING_DIR/examples/rutie_rust_example"
           export LD_LIBRARY_PATH=`ruby -e "puts RbConfig::CONFIG['libdir']"`
-          export DYLD_LIBRARY_PATH=$LD_LIBRARY_PATH
+          cargo test
+    - os: osx
+      rust: stable
+      env: RUBY_THREADING=true BUILD_RUBY_VERSION=2.6.3
+      script:
+        - |
+          export WORKING_DIR=`pwd`
+          echo "Running Eval Example"
+          cargo run --example eval "a=5;b=9;puts a+b"
+          echo "Running Ruby Example"
+          cd "$WORKING_DIR/examples/rutie_ruby_example"
+          gem install bundler
+          bundle install
+          bundle exec rake
+          echo "Running Ruby GVL Example"
+          cd "$WORKING_DIR/examples/rutie_ruby_gvl_example"
+          gem install bundler
+          bundle install
+          bundle exec rake
+          echo "Running Rust Example"
+          cd "$WORKING_DIR/examples/rutie_rust_example"
+          export DYLD_LIBRARY_PATH=`ruby -e "puts RbConfig::CONFIG['libdir']"`
           cargo test
     - os: linux
       rust: stable
