--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rutie"
-version = "0.6.0-rc.2"
+version = "0.6.0"
 authors = [
   "Steve Klabnik <steve@steveklabnik.com>",
   "Dmitry Gritsay <unseductable@gmail.com>",
@@ -17,8 +17,8 @@ build = "build.rs"
 links = "ruby"
 
 [dependencies]
-libc = "0.2.42"
-lazy_static = "1.0.1"
+libc = "0.2.58"
+lazy_static = "1.3.0"
 
 [badges]
 travis-ci = { repository = "danielpclark/rutie", branch = "master" }
