Have the examples build from current repository

--- a/examples/rutie_ruby_example/Cargo.toml
+++ b/examples/rutie_ruby_example/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Daniel P. Clark <6ftdan@gmail.com>"]
 
 [dependencies]
-rutie = "0.5.2"
+rutie = { path = "../../" }
 
 [lib]
 name = "rutie_ruby_example"
