Integrate with `rb-sys` & some minor changes.
This commit starts using the `rb-sys` crate to interface to CRuby.

- Most original crate structure still preserved, we could still get rid
  of the whole `rubysys` module.
- `cargo test --doc` for CRuby 3.1 results are identical to rutie 0.8.4
  (3 failed GC related tests).
- `cargo test --doc` for CRuby 3.2 results are identical to rutie 0.8.4
  (18 failed tests, all segfaults, gotta investigate).
- All examples in `./examples` Ruby & Rust test suites are green.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,11 @@ authors = [
   "Daniel P. Clark <6ftdan@gmail.com>"
 ]
 edition = "2021"
-
 description = "The tie between Ruby and Rust."
 repository = "https://github.com/danielpclark/rutie"
 readme = "README.md"
 keywords = ["cruby", "ruby", "rutie"]
 license = "MIT"
-
 build = "build.rs"
 links = "ruby"
 
@@ -23,6 +21,7 @@ no-link = [] # tells build.rs to not link to libruby
 [dependencies]
 libc = "0.2.151"
 lazy_static = "1.4.0"
+rb-sys = { version = "0.9.64" }
 
 [badges]
 travis-ci = { repository = "danielpclark/rutie", branch = "master" }
