--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,9 @@ jobs:
         gnupg2 man curl direnv software-properties-common libpq-dev \
         libncurses5-dev wget pkg-config ruby-dev tzdata locales cmake \
         libgtk2.0-dev libatk1.0-dev libssl-dev libcairo2-dev libx11-dev \
-        libxpm-dev libxt-dev
+        libxpm-dev libxt-dev libssl1.1 libssl-dev zlib1g-dev \
+        libreadline-dev libyaml-dev libsqlite3-dev sqlite3 libxml2-dev \
+        libxslt1-dev libcurl4-openssl-dev libffi-dev
 
     - name: Install RVM and Ruby
       if: (runner.os != 'Windows') && (env.TEST_ALL || (env.TEST_ALL == false && matrix.ruby_version == '2.7.4' && matrix.rust == 'stable' && matrix.ruby_static == false))
