Ruby version needs to be detected. Set RVM in PATH

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,6 +74,7 @@ jobs:
         curl -sSL https://get.rvm.io | bash -s stable
         source "$HOME/.rvm/scripts/rvm"
         rvm --version
+        echo "$HOME/.rvm/bin" >> $GITHUB_PATH
 
         RVM_OPTS=()
 
